--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "prisma:migrate:dev": "prisma migrate dev"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,9 @@
     "@prisma/client": "^5.6.0",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
     "prisma": "^5.6.0"
   }
 }
